# ChangeLog for dev-embedded/arduino
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-embedded/arduino/ChangeLog,v 1.2 2009/04/14 22:00:18 solar Exp $

*arduino-0015 (14 Apr 2009)

  14 Apr 2009; <solar@gentoo.org> +files/Makefile-0015.patch,
  +arduino-0015.ebuild:
  - version bump. Bug 244969

*arduino-0011 (21 Sep 2008)

  21 Sep 2008; <solar@gentoo.org> +files/Makefile-0011.patch,
  +files/arduino, +metadata.xml, +arduino-0011.ebuild:
  - Initial Commit
