@@ -1,9 +1,7 @@
 AUX Makefile-0011.patch 1413 RMD160 677cb0b9664e0379103cb48866d31e6f91d65b12 SHA1 e9884501b2ebea909b84cb7350f7b5f8a5e7189b SHA256 5ef1676f842f7c7f141919a72006839a154bf69990f4ef38d2fe7c79b3b63401
 AUX Makefile-0015.patch 1429 RMD160 ee3535e9f596cf01e68f7b1b430bcf9fa83107cf SHA1 32dae6f370e5338f37967953bb3feea916fcb609 SHA256 60439c7edf4a9e9d16e66e47549695a89e3b1bd9216499ffad47709e55a6bf3e
 AUX arduino 49 RMD160 5cb54f143b4d69163121fd133f4effa474f2257d SHA1 72b9dc6322353c9474eed33052bc87a636ff1acd SHA256 95d6daf538f4a3d36a16725b8e38ae02b634ff708282b10b5f62678e18289fe4
-DIST arduino-0011-linux.tgz 1361152 RMD160 3020ddaf24440ee132912fd32d05123b9fa38a84 SHA1 4d59a7ceeb8f683e6a616c94cb51e0bfde45f8c3 SHA256 000fa8ce226b6b76d0a30039c645301b97daccaacf082ab53cc8a8f0aaac5e27
 DIST arduino-0015-linux.tgz 1389657 RMD160 6c1de452a0c3936c3cd658fe8784d593aa388cdf SHA1 9f6876449640f287f0c42d821e80e96017f3ddf3 SHA256 5eee994268a7f7227c6bf4ecb9290a256566c051fc0c215a91adbe7f314432fb
-EBUILD arduino-0011.ebuild 1309 RMD160 bae3a080fab447b0507ad8b89eb2c4129cd46a70 SHA1 56c9430f03a2e89790536064dde31e77c3246bb6 SHA256 d68d420337873b2230d090217a5e968ce71ce6843c968b22e2650f3860c778fa
-EBUILD arduino-0015.ebuild 1631 RMD160 2a0b9e830cb24f1c5d564c9192a661b1411b7dcb SHA1 2de6b16ef1b342b5ed7f7782c91282bad89bf051 SHA256 8eaca16d264c313d0e6d683a34bc300d1cad17b23802c10cca3f5bd93d40403e
-MISC ChangeLog 523 RMD160 f35be67a7c100259298f8b8139c0f313ba5a8f9b SHA1 ab60084778393b799f61a7d6ddea1aefcb2b4ded SHA256 5688683a667c41c32f6a7df57d8cd0323e903e52b03ded9d9f6cc418b24eef00
+EBUILD arduino-0015-r1.ebuild 2237 RMD160 6e2d1fa961e35779d71e99d72a04b3d260824384 SHA1 e941389d34126df9935c9ac02200023671c1ae0e SHA256 1398f936ead559e3dd1fb29b493b3c22fddb32610d1ccb6871296e5649b1624e
+MISC ChangeLog 895 RMD160 eaeb263ecf5a1d76a79eb6868db3e8fa18618efe SHA1 a088a8c8b4cea4ead310b0412c940c6b04413738 SHA256 c73ff8806b976817a74cb9b973555ad13bfad84e47f74bebac85aaf5ecb1e912
 MISC metadata.xml 229 RMD160 a934867befeafd5ea4b262f492b0fb6e1b3d6451 SHA1 2ca6d09172d4904a069e5ecea4848b6f4d6857a6 SHA256 5e3deff28663b8e5950241ef1cce6fb50b2f28effd9451bf117c796230644177
