@@ -1,6 +1,6 @@
 # Copyright 2008-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/arduino/arduino-0015.ebuild,v 1.1 2009/04/14 22:00:18 solar Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/arduino/arduino-0015-r1.ebuild,v 1.1 2009/04/18 16:50:55 nixphoeni Exp $
 
 inherit eutils
 
@@ -13,10 +13,10 @@ KEYWORDS="~x86 ~amd64"
 RESTRICT="strip binchecks"
 IUSE="java"
 RDEPEND="dev-embedded/avrdude"
-DEPEND="${RDEPEND} sys-devel/crossdev java? ( virtual/jre dev-embedded/uisp dev-java/jikes dev-java/rxtx )"
+DEPEND="${RDEPEND} sys-devel/crossdev java? ( virtual/jre dev-embedded/uisp dev-java/jikes dev-java/rxtx dev-java/antlr )"
 
 pkg_setup() {
-	[ ! -x /usr/bin/avr-gcc ] && ewarn "You need to crossdev -s4 avr"
+	[ ! -x /usr/bin/avr-g++ ] && ewarn "Missing avr-g++; you need to crossdev -s4 avr"
 }
 
 pkg_postinst() {
@@ -42,6 +42,16 @@ src_install() {
 	if use java; then
 		sed -e  s@__PN__@${P}@g < "${FILESDIR}"/arduino > "${D}/usr/bin/arduino"
 		chmod +x "${D}/usr/bin/arduino"
+
+		# get rid of libraries provided by other packages
+		rm -f "${D}/usr/share/${P}/lib/RXTXcomm.jar"
+		rm -f "${D}/usr/share/${P}/lib/antlr.jar"
+
+		# fix the provided arduino script to call out the right libraries
+		sed -i -e 's@lib/antlr\.jar@$(java-config -dp antlr)@g' \
+			-e 's@lib/RXTXcomm\.jar@$(java-config -dp rxtx-2)@g' "${D}/usr/share/${P}/arduino"
+		# and fix its reference to LD_LIBRARY_PATH (see bug #189249)
+		sed -i -e 's@^LD_LIBRARY_PATH=.*@LD_LIBRARY_PATH=$(java-config -di rxtx-2)${LD_LIBRARY_PATH+:$LD_LIBRARY_PATH}@' "${D}/usr/share/${P}/arduino"
 
 		# use system avrdude
 		# patching class files is too hard
