@@ -1,6 +1,14 @@
 # ChangeLog for dev-embedded/arduino
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/arduino/ChangeLog,v 1.2 2009/04/14 22:00:18 solar Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/arduino/ChangeLog,v 1.3 2009/04/18 16:50:55 nixphoeni Exp $
+
+*arduino-0015-r1 (18 Apr 2009)
+
+  18 Apr 2009; Joe Sapp <nixphoeni@gentoo.org> -arduino-0011.ebuild,
+  -arduino-0015.ebuild, +arduino-0015-r1.ebuild:
+  Fix for amd64 systems - use system libraries instead of upstream-provided
+  libraries. Check for avr-g++ since that's what the IDE will complain
+  about. Also fixed potential security bug (see related bug #189249).
 
 *arduino-0015 (14 Apr 2009)
 
